--- a/child_pages/cc-elections/Candidates/broomhall.html
+++ b/child_pages/cc-elections/Candidates/broomhall.html
@@ -151,7 +151,7 @@
                 <br>
                 <br>
                 It’s also worth noting that she was recently involved in some election-season turmoil, where she expressed that part of her low public presence stemmed from concerns about 
-                bullying and cyber-bullying. While those concerns are real and understandable, the effect is that voters still lack the ability to clearly see her positions and agenda. Until more 
+                bullying and cyber-stalking. While those concerns are real and understandable, the effect is that voters still lack the ability to clearly see her positions and agenda. Until more 
                 accessible, shareable campaign material is provided, her visibility and transparency remain limited, leaving much of the electorate in the dark about where she stands.
                 <br>
                 <br>
@@ -173,7 +173,7 @@
                 InformTheVoteNJ’s meet n greet and leaving the door open to join the upcoming public forum at the library—her overall campaign presence remains limited.
                 <br>
                 <br>
-                Broomhall has expressed concerns about bullying and cyber-bullying, and those concerns are valid. At the same time, voters cannot be left without accessible, verifiable information. 
+                Broomhall has expressed concerns about bullying and cyber-stalking, and those concerns are valid. At the same time, voters cannot be left without accessible, verifiable information. 
                 Multiple opportunities have been available for her to provide a platform, long-form interview, or other public-facing material, and those opportunities have not yet been taken.
                 <br>
                 <br>
@@ -322,7 +322,7 @@
                 Compounding this issue is her limited and erratic social media presence. Broomhall made a rare Facebook post during the campaign accusing 
                 another candidate of creating a smear site, claiming to have “traced the IP address.” While candidates are free to engage how they wish, 
                 this kind of post crosses into questionable territory for a local race—especially when paired with statements about avoiding social 
-                media due to concerns about “cyber-bullying.” That contradiction doesn’t just raise ethical questions; it calls into doubt whether her 
+                media due to concerns about “cyber-stalking.” That contradiction doesn’t just raise ethical questions; it calls into doubt whether her 
                 online statements and civic posture are consistent with the transparency she expects from others. Not only that, but it calls into question 
                 the overall validity of the issue she raised... if she isn't communicative, how can we be confident about verifying her claims?
                 <br><br>
@@ -344,13 +344,159 @@
             
      <div class="candidate-agenda">
 
-            <h4 class="sub-heading">Agenda</h4>
-            <div class="experience can-sec">
-                As of 10/24/2025, we still don't have any publishable information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
-            </div>
-   
+        <h4 class="sub-heading">Agenda</h4>
+        <div class="experience can-sec">
+            <ul>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Resident-First Leadership</strong></summary>
+                <p>
+                Broomhall emphasizes that her loyalty lies solely with the residents of Millville—not developers, engineering firms, or political donors. 
+                She argues that residents have been neglected while outside interests and investors benefit, and pledges to restore accountability by 
+                placing citizens’ needs above all else.
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Infrastructure &amp; Clean Water</strong></summary>
+                <p>
+                She identifies Millville’s aging water supply system as one of the city’s most urgent problems. 
+                Broomhall intends to collaborate with fellow commissioners and city staff to find funding sources to replace the crumbling system, 
+                arguing that “our community’s basic needs have been neglected for too long.” 
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Sustainable Growth &amp; Accountability</strong></summary>
+                <p>
+                Broomhall advocates for “new and innovative ways” to create a more sustainable future for Millville residents. 
+                She criticizes unfulfilled promises from developers and investors that have left the city with “more bills, more crime, and more decay.” 
+                Her goal is to build a city that prioritizes long-term stability, safety, and quality of life.
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Transparency &amp; Participation</strong></summary>
+                <p>
+                Broomhall encourages in-person civic participation over online campaigning. 
+                She has chosen not to rely on paid advertising or social media, preferring to attend public forums and city meetings to communicate with voters directly. 
+                She emphasizes that “We the People, By the People” should define Millville’s government—not outside influence.
+                </p>
+                </details>
+                </li>
+            </ul>
+        </div>
+
+        <br>
+
+        <h4 class="sub-heading">Issues</h4>
+        <div class="experience can-sec">
+            <ul>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Economic Revitalization</strong></summary>
+                <p>
+                As a retail team leader experienced in revenue generation and product placement, Broomhall believes Millville’s local economy can be 
+                revitalized through better management, community cooperation, and accountability in how projects are executed. 
+                She argues that true progress will come from empowering residents rather than courting outside developers.
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Public Trust &amp; Local Morale</strong></summary>
+                <p>
+                She expresses concern that broken promises have eroded trust between City Hall and the community. 
+                By emphasizing transparency, responsiveness, and ethical leadership, she hopes to rebuild public confidence 
+                and foster a healthier civic atmosphere where residents feel heard and represented.
+                </p>
+                </details>
+                </li>
+            </ul>
+        </div>
+
+        <br>
+
+        <h4 class="sub-heading">Background and Experience</h4>
+        <div class="experience can-sec">
+            <ul>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Professional and Educational Background</strong></summary>
+                <p>
+                A lifelong resident of Millville, Broomhall graduated in 2021 with a Safety and Sanitation Culinary Certificate. 
+                She currently works as a team leader for a retail company, where she oversees product placement and helps drive revenue growth.
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Community Involvement</strong></summary>
+                <p>
+                Broomhall began attending city commission meetings at age 13 and has volunteered for various local projects throughout her youth and adulthood. 
+                She expresses a deep personal investment in Millville’s future, saying, “The future of Millville is my future.”
+                </p>
+                </details>
+                </li>
+
+                <br>
+                <li>
+                <details>
+                <summary style="color: blue;"><strong>Perspective &amp; Values</strong></summary>
+                <p>
+                Having traveled across multiple states and countries, Broomhall says she’s gained perspective on how much potential Millville has compared 
+                to other places—and how much it’s being “left behind.” 
+                She pledges to bring that broader worldview back home to inspire new ideas and stronger civic standards.
+                </p>
+                </details>
+                </li>
+            </ul>
+        </div>
+
+        <br>
+
+        <h4 class="sub-heading">Source Material (Campaign Submission)</h4>
+        <div class="experience can-sec">
+            <p style="white-space: pre-wrap;">
+            "I am a lifelong resident of Millville graduating in 2021 with a safety and sanitation culinary certificate. I currently work for a retail company as a team leader for my department. Helping promote revenue generation, and leading my team through the product placement process. I have several years of experience volunteering for various local projects. I first started attending commission meetings when I was 13. I love to travel, I’ve been to many other states and countries. I have learned there’s a whole world outside of Cumberland County and Millville is being left behind! I am not bought And paid for by any outside interest. I don’t have any signs, commercials, or airplanes. I believe in We the people By the people. No loyalty to engineers, law, firms, or developers. My loyalty is, has, and will always be with the residents of Millville. I will work with fellow commissioners and city staff to the find funding desperately needed to replace our crumbling water supply system. Our community’s basic needs have been neglected for too long. Broken promises from developers and investors with a lack of accountability has left residents with only more bills,  more crime and more decay. It is time to put the residents needs above all else. I will seek new and innovative ways to create a more sustainable future for our residents seeking a safe, healthy and happy quality of life. From the child family center to Millville senior high school, Millville is my hometown. And more important is that I intend to continue living and working here. I am running for Millville city commission because the future of Millville is my future!
+
+            Some of my reasons for avoiding posting on social media include that I’m well aware that my mom has a strong social media presence in Millville and I intentionally choose to stand apart from that. Our current vice mayor doesn’t use social media along with a few other candidates. I do my best to participate by attending as many open forums that I’ve been invited to and my schedule allowed."
+            </p>
+        </div>
+
+        <br>
+
+        <h4 class="sub-heading">Facebook Post Regarding IP Addresses</h4>
+        <div class="experience can-sec">
+            <p style="white-space: pre-wrap;">
+            "I feel obligated to speak out.  
+
+            I am a candidate for the Millville City Commission and I was recently made aware of a website called “Millville Votes”. It appears someone has created a website for a smear campaign against a fellow female candidate. The attack was extremely personal and not relevant to her policies, abilities or the needs of Millville. No one deserves that kind of treatment in a municipal election.
+
+            My fear of cyberstalking has been the primary reason why I have avoiding using social media to campaign.  I am not making this post to gain support for my campaign. I am posting this because too often, women don’t call out poor behavior out of fear that we’ll be next. The reality is that the more we let bad behavior go unchecked, the more of it we’ll probably see. 
+
+            This election should focus on policy, ideas and dedication - not trying to destroy someone's life. Disagreements are inevitable, a candidate's personal life should be off limits. 
+
+            I want to remind EVERYONE that when this election is over we will still be neighbors & we will still see each other in Wawa.  
+
+            Someone I know with IT skills looked at the site and had this to say:
+            I looked into the technical setup of the site. Based on publicly available information, I noticed that several websites (electdandixon.com, millvillemeansbusiness.org, millvillevotes.com, and a related business page) appear to share the same hosting infrastructure on Amazon’s servers (76.223.105.230 and 13.248.243.5, as of the day I checked). The configuration details, such as hosting locations and timing of setup, looked very similar. All sites share the same AWS Global Accelerator IPs (76.223.105.230 primary, plus anycast failover), a textbook sign of single-account configuration. Easy for one person/team to manage multiple domains via AWS Route 53 or similar. The consistent TTL (3600s) and reverse DNS (a16e665f42988324c.awsglobalaccelerator.com)."
+            </p>
+        </div>
+
     </div>
 </div>   
 </body>
