--- a/child_pages/cc-elections/Candidates/sbrana.html
+++ b/child_pages/cc-elections/Candidates/sbrana.html
@@ -312,13 +312,7 @@
         <div class="video-box-modal can-sec">
             <h3 class="video-heading">John Sbrana on Vineland BOE: Absenteeism, SROs, Trades & Curriculum, Facilities, Staffing</h3>
 
-            <!-- Replace VIDEO_ID_HERE with the actual YouTube ID -->
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID_HERE"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin"
-                    allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/BXc_rZuO3p4?si=iKEOzmydSnMF3VdR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br><br>
 
             <details>
