makema radio interview moved out of other div

--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -380,6 +380,7 @@
                 </tbody>
               </table>
             </div>
+            </details>
 
             <div class="video-box-modal can-sec">
             <h3 class="video-heading">Makema Douglas on Vineland BOE: Special Ed, Early Intervention & Raising Standards</h3>
