image resize attempt

--- a/index.html
+++ b/index.html
@@ -332,16 +332,16 @@
     .icons img{ width: 20px; height: 20px; opacity: 0.92; }
 
     .hero-image-header{
-      max-width: 520px;
-      margin-bottom: 12px;
+      max-width: 360px;        /* desktop cap */
+      margin: 0 auto 14px;    /* center + spacing */
     }
 
     .hero-image-header img{
-      width: 100%;
+      width: 100%;             /* responsive scaling */
       height: auto;
       display: block;
       border-radius: 14px;
-      box-shadow: 0 14px 40px rgba(0,0,0,0.35);
+      box-shadow: 0 12px 32px rgba(0,0,0,0.35);
     }
   </style>
 </head>
