--- a/index.html
+++ b/index.html
@@ -343,6 +343,12 @@
       border-radius: 14px;
       box-shadow: 0 12px 32px rgba(0,0,0,0.35);
     }
+
+    @media (max-width: 600px){
+      .hero-image-header{
+        max-width: 260px;
+      }
+    }
   </style>
 </head>
 
