fire district coverage v2 small tweaks

--- a/index.html
+++ b/index.html
@@ -430,11 +430,15 @@
               The most consistent struggles across districts are recruiting candidates for commissioner seats and maintaining adequate firefighter and EMS staffing levels.
             </p>
             <p>
-              Because turnout is so minimal, it is difficult to know precisely what voters are confused about, but explaining what fire districts are, why they matter, and how they fit into county-wide emergency services may be enough to generate baseline interest and participation.
+              Because turnout is so minimal, it is difficult to know precisely what voters specifically need to know, but explaining what 
+              fire districts are, why they matter, and how they fit into county-wide emergency services may be enough to generate baseline 
+              interest and participation.
             </p>
             <p>
-              The site and forum are intended to function as a stress test of democratic oversight—addressing awareness gaps and turnout—and if participation remains negligible despite these efforts,
-              that outcome itself becomes evidence to evaluate redistricting, consolidation, or a return to municipal governance of emergency services.
+              This site, coverage, and the upcoming candidate's forum on February 7th are intended to function as a stress test of democratic 
+              oversight—addressing awareness gaps and turnout—and if participation remains negligible despite these efforts,
+              that outcome itself becomes evidence to evaluate redistricting, consolidation, or a return to municipal governance of these
+              emergency services.
             </p>
           </div>
         </details>
@@ -474,7 +478,7 @@
     <section class="card" id="timeline">
       <h2>Timeline</h2>
       <p class="small">
-        The timeline is the point. Coverage isn’t “late” — it’s structurally squeezed.
+        The timeline is now an important part of the point. Coverage isn’t “late” — it’s structurally squeezed.
       </p>
 
       <div class="callout">
@@ -520,7 +524,7 @@
             <span class="tag">Participation goal</span>
             <strong>Visibility → participation → evidence.</strong>
             <p class="small">
-              If turnout remains negligible even after basic outreach, that outcome itself becomes useful evidence for evaluating structural changes later.
+              If turnout remains negligible even after all these efforts, that outcome itself becomes useful evidence for evaluating structural changes later.
             </p>
           </div>
         </div>
@@ -537,7 +541,7 @@
               </a>
             </li>
             <li>
-              <b>Laurel Lake Fire District meeting page (verified; county listing was inconsistent):</b>
+              <b>Laurel Lake Fire District site (verified; county listing was inconsistent):</b>
               <a href="https://www.commercialtwpbofc3.com/home-meetings" target="_blank" rel="noreferrer noopener">
                 https://www.commercialtwpbofc3.com/home-meetings
               </a>
